<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OnboardingScreen2">

    <ImageView
        android:id="@+id/onBoardLogo2"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:contentDescription="@string/onboarding_image_content_des1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/onBoardSVG2"
        android:layout_width="380dp"
        android:layout_height="267dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/onboarding_image_content_des2"
        android:src="@drawable/onboard_svg_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26999998" />

    <TextView
        android:id="@+id/onBoardT2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/onboarding_screen2_topic"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onBoardSVG2"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/onBoardDes2"
        android:layout_width="384dp"
        android:layout_height="110dp"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/poppins"
        android:text="@string/onboarding_screen2_des"
        android:textColor="@color/very_light_grey"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onBoardT2"
        app:layout_constraintVertical_bias="0.062" />

    <ImageView
        android:id="@+id/onBoardSlider2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/onboarding_image_content_des3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onBoardDes2"
        app:layout_constraintVertical_bias="0.082"
        app:srcCompat="@drawable/slider_indicator_2" />

    <Button
        android:id="@+id/onBoardBtn2"
        android:layout_width="175dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/btnNext"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onBoardDes2"
        app:layout_constraintVertical_bias="0.484" />
</androidx.constraintlayout.widget.ConstraintLayout>