<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OnboardingScreen3">

    <ImageView
        android:id="@+id/onBoardLogo3"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:contentDescription="@string/onboarding_image_content_des1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/onBoardSVG3"
        android:layout_width="261dp"
        android:layout_height="265dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/onboarding_image_content_des2"
        android:src="@drawable/onboard_svg_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26999998" />

    <TextView
        android:id="@+id/onBoardT3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/onboarding_screen3_topic"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onBoardSVG3"
        app:layout_constraintVertical_bias="0.110000014" />

    <TextView
        android:id="@+id/onBoardDes3"
        android:layout_width="384dp"
        android:layout_height="110dp"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/poppins"
        android:text="@string/onboarding_screen3_des"
        android:textColor="@color/very_light_grey"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onBoardT3"
        app:layout_constraintVertical_bias="0.062"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/onBoardSlider3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/onboarding_image_content_des3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onBoardDes3"
        app:layout_constraintVertical_bias="0.082"
        app:srcCompat="@drawable/slider_indicator_3" />

    <Button
        android:id="@+id/onBoardBtn3"
        android:layout_width="190dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/btnGetStarted"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onBoardDes3"
        app:layout_constraintVertical_bias="0.484"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>